apps/base/backend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    canary:
      canaryService: backend-canary-service
      stableService: backend-service
      trafficRouting:
        istio:
          virtualService:
            name: app-virtualservice
            routes:
              - primary
      steps:
        - setWeight: 20
        - pause: { duration: 30m }
        - setWeight: 100
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: api-backend
          image: backend:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-canary-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  selector:
    app: backend
