apps/base/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - name: canary-header
      match:
        - headers:
            X-Canary:
              exact: "true"
          uri:
            prefix: /api/
      rewrite:
        uri: /
      route:
        - destination:
            host: backend-canary-service
            port:
              number: 5000
    - name: primary
      match:
        - uri:
            prefix: /api/
      rewrite:
        uri: /
      route:
        - destination:
            host: backend-service
            port:
              number: 5000
          weight: 90
        - destination:
            host: backend-canary-service
            port:
              number: 5000
          weight: 10
    - name: frontend
      route:
        - destination:
            host: frontend-service
            port:
              number: 80
